@@ -252,6 +252,7 @@ td.success {
 td.failure {
 	background: #f88;
 }
+td.running,
 td.building {
 	background: #ff8;
 }
@@ -294,6 +295,11 @@ table.waterfall td.start {
 
 table.waterfall td.start a {
 	text-decoration: none;
+}
+
+table.waterfall td.exception {
+	border: 3px solid red;
+	background: #c66;
 }
 
 /* From classic */
