@@ -1,5 +1,10 @@
 2008-08-16  Frederic Peters  <fpeters@0d.be>
 
+	* buildbot/public_html/lgo.css: color up buildbot exceptions and
+	running step.
+
+2008-08-16  Frederic Peters  <fpeters@0d.be>
+
 	* jhbuild/buildbot/changes.py: added support for the
 	content-transfer-encoding header as it is used in some emails; also
 	fixed discovery of last line in translator messages.
